# sensors-toolkit

./: .gitignore  CMakeLists.txt  build-ios.conf.defaults  build-ios.sh
libsensors/: CMakeLists.txt
libsensors/include/: libsensors.h
libsensors/src/: libsensors.cpp
sensors-ios/: CMakeLists.txt
sensors-ios/cmake/: Info.plist.in
sensors-ios/resources/: Main.storyboard
sensors-ios/resources/Media.xcassets/icon-camera-large.imageset/: Contents.json
sensors-ios/resources/Media.xcassets/icon-camera.imageset/: Contents.json
sensors-ios/resources/Media.xcassets/icon-exposure.imageset/: Contents.json
sensors-ios/resources/Media.xcassets/icon-file.imageset/: Contents.json
sensors-ios/resources/Media.xcassets/icon-fill-old.imageset/: Contents.json
sensors-ios/resources/Media.xcassets/icon-fill.imageset/: Contents.json
sensors-ios/resources/Media.xcassets/icon-fit-old.imageset/: Contents.json
sensors-ios/resources/Media.xcassets/icon-fit.imageset/: Contents.json
sensors-ios/resources/Media.xcassets/icon-focus.imageset/: Contents.json
sensors-ios/resources/Media.xcassets/icon-fps.imageset/: Contents.json
sensors-ios/resources/Media.xcassets/icon-iso.imageset/: Contents.json
sensors-ios/resources/Media.xcassets/icon-net.imageset/: Contents.json
sensors-ios/resources/Media.xcassets/icon-sun.imageset/: Contents.json
sensors-ios/src/: AppUtility.swift  Camera.swift  Encoder.swift  FileOutput.swift  Location.swift  Motion.swift  NetworkOutput.swift  NetworkOutputServer.h  NetworkOutputServer.mm  NetworkOutputServerImpl.cpp  NetworkOutputServerImpl.hpp  Pipeline.swift  Sensors-Bridging-Header.h  VideoToolbox+extensions.swift  ViewController.swift
sensors-pc/: CMakeLists.txt
sensors-pc/sensors-decode/: main.cpp
sensors-pc/sensors-preview/: main.cpp
